--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ section{
 
 
 #home{
-    background-image:url(../images/IMG_3452\ kansikuva.jpg); 
+    background-image:url(IMG_3452 kansikuva.jpg); 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
