--- a/styles.css
+++ b/styles.css
@@ -86,10 +86,10 @@ section{
 
 #about{
     padding: 50px 8%;
-    background-image:url();
+/*  background-image:url(); 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
 
 #about h2{
